fix: overflow in select elements [noissue]

--- a/src/style/modal.css
+++ b/src/style/modal.css
@@ -98,6 +98,7 @@ body.show-modal .modal {
 }
 
 .modal form select {
+  max-width: 160px;
   background-color: var(--card-text-color);
   border: 0;
   border-radius: 4px;
